  - Deprecate legacy color constants in our Colors class, courtesy of Warrior with PR #7981.
  - Allow getting TownyException error message as component, courtesy of Warrior with PR #7983.
  - Add prior location to SuccessfulTownyTeleportEvent, courtesy of flyncodes with PR #7984.
  - Format resident last online with relative time, courtesy of Warrior with PR #7986.
  - Testperm for checkperm, courtesy of Warrior with PR #7987.
  - Delete received nation ally requests if sender deletes itself, courtesy of Warrior with PR #7988.
  - Revert change to potion protection handling, courtesy of Warrior with PR #7990.
  - Improve lingering potion protection, courtesy of Warrior with PR #7991.
  - Replace pre 1.19 entity/block keys with constants, courtesy of Warrior with PR #7992.
  - Update inventory system to use components & PDC, courtesy of Warrior with PR #7982.
0.101.2.7:
  - Fix the changelog reader thinking the limit has been reached, courtesy of Warrior with PR #7994.
  - Fix getting lingering potion effects on legacy versions, courtesy of Warrior with PR #7997.
    - Closes #7996.
  - Fix getting respawn location <1.21.5, courtesy of Warrior with PR #7998.
    - Closes #7995.
  - Fix literal translatables attempting to translate, courtesy of Warrior with PR #7999.
  - Add setting for default peaceful nation to create, courtesy of RyanoDino with PR #8000.
    - Closes #7970.
  - New Config Option: nation.default_neutral
    - Default: true
    - Default neutral status of the nation (are new nations neutral by default?)
  - Add saving of hasActiveWar for towns and nations, courtesy of SulkyWhale with PR #8002.
  - Fix mountable entities having their saddles sheared, copper golems having their items dropped.
  - Add ability to set max town and nation board lengths.
  - New Config Option: global_town_settings.max_board_length
    - Default: 170
    - The maximum number of characters that the town (and nation,) board messages can be.